<resources>
    <string name="app_name">MarketPlace_Proyecto_Final_Movil_1</string>
    <string name="title_home">Home</string>
    <string name="title_market_place">MarketPlace</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id">defaultchannel</string>
    <string name="channel_notification_chat_marketplace">Notificaciones de Marketplace</string>
    <string name="channel_description_chat_marketplace">Notificaciones recibidas por la compra venta de articulos</string>
    <string name="login">Login</string>
    <string name="register_me">Sing UP</string>
    <string name="todo">TODO</string>
    <string name="title_activity_start_ui">StartUI</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_product_user">Tus Productos</string>
    <string name="title_user_info">Tu Info</string>
    <string name="vender_button">Vender</string>
    <string name="filtrar_button">Filtrar Por categoria</string>
    <string name="ubicacion_button">Cambiar de Ubicación</string>
    <string name="todo1">TODO</string>
    <string name="notification_id">Notification_id:</string>
    <string name="title_activity_maps_radius">MapsRadius</string>
    <string name="guardar_punto" />
    <string name="enviar_coordenadas_y_radio">enviar coordenadas y radio</string>
    <string name="titulo">Titulo:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="precio">Precio:</string>
    <string name="guardar">Guardar</string>
    <string name="seleccionar_ubicacci_n">Seleccionar Ubicacción</string>
    <string name="cancelar">Cancelar</string>
    <string name="all" />
    <string name="subtitle_activity_main" />
    <string name="title_activity_main" />
    <string name="upload" />
    <string name="subir_foto_y_terminar">Subir Foto y Terminar</string>
    <string name="todos">TODO</string>
    <string name="nombre_vendedor">Nombre Vendedor:</string>
    <string name="nombre_comprador">Nombre Comprador:</string>
    <string name="producto">Producto:</string>
    <string name="separador">-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="todo2">TODO</string>
    <string name="title_activity_maps_menssage">MapsMenssageActivity</string>
    <string name="todosdf">TODO</string>
    <string name="todoas">TODO</string>
</resources>