<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_marketplace">

    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.moviles.marketplace.ui.fragments.marketplace.MarketPlaceFragment"
        android:label="@string/title_market_place"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.moviles.marketplace.ui.fragments.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_product_user"
        android:name="com.moviles.marketplace.ui.fragments.productuser.ProductUserFragment"
        android:label="@string/title_product_user"
        tools:layout="@layout/fragment_product_user"/>

    <fragment
        android:id="@+id/navigation_user_info"
        android:name="com.moviles.marketplace.ui.fragments.userinfo.UserInfoFragment"
        android:label="@string/title_user_info"
        tools:layout="@layout/fragment_user_info"/>

</navigation>