<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.marketplace.MarketPlaceFragment">

    <Button
        android:id="@+id/venderButton"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:text="@string/vender_button"
        app:layout_constraintStart_toEndOf="@+id/ubicacionButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filtrarButton"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:text="@string/filtrar_button"
        app:layout_constraintStart_toEndOf="@+id/venderButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ubicacionButton"
        android:layout_width="149dp"
        android:layout_height="65dp"
        android:text="@string/ubicacion_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMarketPlace"
        android:layout_width="match_parent"
        android:layout_height="523dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>