<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProductFormActivity">

    <TextView
        android:id="@+id/tituloLabe"
        android:layout_width="98dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tituloInput"
        android:layout_width="258dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLabe"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/decripcionLabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/descripci_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloInput" />

    <Button
        android:id="@+id/btnGuardarProducto"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2821F3"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="414dp"
        android:layout_height="48dp"
        android:backgroundTint="#FF0000"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarProducto"
        app:layout_constraintVertical_bias="0.422"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/descripcionInput"
        android:layout_width="259dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decripcionLabe"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/percioInput"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/precioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionInput" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.moviles.marketplace.ui.fragments.MapsFragment"
        android:layout_width="390dp"
        android:layout_height="208dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percioInput" />

</androidx.constraintlayout.widget.ConstraintLayout>