<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.moviles.marketplace.ui.activities.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/input_email_login"
        android:layout_width="252dp"
        android:layout_height="66dp"
        android:layout_below="@+id/imageUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUser"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_password_login"
        android:layout_width="253dp"
        android:layout_height="79dp"
        android:layout_below="@+id/input_email_login"
        android:layout_alignStart="@+id/input_email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_login"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="166dp"
        android:text="@string/register_me"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rectangle_pink"
        android:text="@string/login"
        android:textColor="#8C9EFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>
